--- a/package.json
+++ b/package.json
@@ -1,29 +1,51 @@
 {
   "name": "angular-mn-dialog",
-  "private": true,
   "version": "0.0.1",
-  "description": "",
+  "description": "a angular service to mn-dialog",
+  "main": "dist/angular-mn-dialog.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "start": "scripts/start.sh",
+    "bundle": "scripts/bundle.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "Darlan Mendonça <darlanmendonca@gmail.com>",
+  "keywords": [
+    "minimalist",
+    "webcomponent",
+    "dialog",
+    "modal",
+    "angular",
+    "service"
+  ],
+  "author": "Darlan Mendonça <darlanmendonca@gmail.com> (https://github.com/darlanmendonca)",
   "license": "MIT",
   "homepage": "https://minimalist-components.github.io/mn-dialog/",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/minimalist-components/angular-mn-dialog.git"
+  },
+  "bugs": {
+    "url": "https://github.com/minimalist-components/angular-mn-dialog/issues"
+  },
+  "dependencies": {
+    "angular": "^1.6.1",
+    "mn-dialog": "^0.0.2"
+  },
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
     "bower-files": "^3.14.1",
     "browser-sync": "^2.14.0",
     "compression": "^1.6.2",
     "connect-history-api-fallback": "^1.3.0",
-    "eslint-config-angular-mn-component": "0.0.1",
+    "eslint-config-angular-mn-component": "^0.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
+    "gulp-clean-css": "^2.3.2",
     "gulp-concat": "^2.6.0",
     "gulp-eslint": "^3.0.1",
-    "gulp-inject": "^4.1.0",
     "gulp-jade": "^1.1.0",
     "gulp-minify-css": "^1.2.4",
     "gulp-ng-annotate": "^2.0.0",
@@ -33,6 +55,10 @@
     "gulp-sourcemaps": "^2.3.1",
     "gulp-sync": "^0.1.4",
     "gulp-uglify": "^2.0.0",
+    "mn-button": "^0.0.4",
+    "mn-gh-page": "git+https://github.com/minimalist-components/gh-page.git",
+    "mn-table-list": "^0.0.2",
+    "package-files": "^0.0.5",
     "require-all": "^2.0.0"
   }
 }
