--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-mn-dialog",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "a angular service to mn-dialog",
   "main": "dist/angular-mn-dialog.js",
   "files": [
@@ -31,7 +31,7 @@
   },
   "dependencies": {
     "angular": "^1.6.1",
-    "mn-dialog": "^0.0.2"
+    "mn-dialog": "~0.0.4"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
