--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-mn-dialog",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "a angular service to mn-dialog",
   "main": "dist/angular-mn-dialog.js",
   "files": [
@@ -30,8 +30,8 @@
     "url": "https://github.com/minimalist-components/angular-mn-dialog/issues"
   },
   "dependencies": {
-    "angular": "^1.6.1",
-    "mn-dialog": "~0.0.6"
+    "angular": "~1.6.4",
+    "mn-dialog": "~0.0.7"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
